Bug 57571 - Fix warning on uninitialiazed variable
Summary: Fix warning on uninitialiazed variable
Status: RESOLVED FIXED
Alias: None
Product: poppler
Classification: Unclassified
Component: cairo backend (show other bugs)
Version: unspecified
Hardware: Other All
: medium normal
Assignee: poppler-bugs
QA Contact:
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2012-11-26 19:54 UTC by Hib Eris
Modified: 2012-11-28 17:00 UTC (History)
0 users

See Also:
i915 platform:
i915 features:


Attachments
Fix-uninitaliazed-warning-in-CairoOutputDev.patch (939 bytes, text/plain)
2012-11-26 19:54 UTC, Hib Eris
Details

Description Hib Eris 2012-11-26 19:54:48 UTC
Created attachment 70612 [details]
Fix-uninitaliazed-warning-in-CairoOutputDev.patch

Fix warning on uninitialiazed variable
Comment 1 Carlos Garcia Campos 2012-11-28 17:00:41 UTC
Good catch, pushed to git master, thank you!


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.