cairo: Fix uninitaliazed warning in CairoOutputDev

Fix warning:

  CXX    CairoOutputDev.lo
../../poppler/poppler/CairoOutputDev.cc: In member function 'virtual void RescaleDrawImage::getRow(int, uint32_t*)':
../../poppler/poppler/CairoOutputDev.cc:2813:25: warning: 'pix' may be used uninitialized in this function [-Wuninitialized]

https://bugs.freedesktop.org/show_bug.cgi?id=57571